@@ -5,6 +5,7 @@
 - "shell" (or "!") now works even without content (so you can run it on startup)
 - ignore annoying warnings for LibreSSL users (by Anna cyberTailor)
 - ansicat: workaround what seems to be a BS4 bug where elements after a <br/> were ignored
+- blocklist: marked x.com, twitter.com and youtube.com as blocked to save bandwith until we have a viable option to use them with offpunk.
 
 ## 2.6 - February 24th 2025
 FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
